--- a/assets/templates/docker-compose/environments/includes/blackfire.linux.yml
+++ b/assets/templates/docker-compose/environments/includes/blackfire.linux.yml
@@ -3,4 +3,4 @@
 services:
   php-blackfire:
     volumes:
-      - {{ default "/dev/null" .ssh_auth_sock }}:/run/host-services/ssh-auth.sock
+      - {{ default "/dev/null" $.ssh_auth_sock }}:/run/host-services/ssh-auth.sock
