--- a/assets/templates/docker-compose/environments/magento1/magento1.base.yml
+++ b/assets/templates/docker-compose/environments/magento1/magento1.base.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - MAGE_IS_DEVELOPER_MODE=1
 
-{{- if ( default false .reward_spx ) }}
+{{- if ( default false $.reward_spx ) }}
   php-spx:
     environment:
       - MAGE_IS_DEVELOPER_MODE=1
