--- a/assets/templates/docker-compose/environments/magento2/magento2.magepack.darwin.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.magepack.darwin.yml
@@ -1,7 +1,7 @@
 {{- /* @formatter:off */ -}}
 
 x-volumes: &volumes
-  - .{{ default "" .reward_web_root }}/pub/media:/var/www/html/pub/media:cached
+  - .{{ default "" $.reward_web_root }}/pub/media:/var/www/html/pub/media:cached
   - appdata:/var/www/html
 
 services:
