--- a/assets/templates/docker-compose/environments/magento2/magento2.splitdb.sales.base.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.splitdb.sales.base.yml
@@ -9,23 +9,23 @@ services:
     depends_on:
       - salesdb
 
-{{- if ( default false .reward_spx ) }}
+{{- if ( default false $.reward_spx ) }}
   php-spx:
     depends_on:
       - salesdb
 {{- end }}
 
   salesdb:
-    hostname: "{{ .reward_env_name }}-salesdb"
-    image: {{ default "docker.io/rewardenv" .reward_docker_image_repo }}/mariadb:{{ default "10.4" .mariadb_version }}
+    hostname: "{{ $.reward_env_name }}-salesdb"
+    image: {{ default "docker.io/rewardenv" $.reward_docker_image_repo }}/mariadb:{{ default "10.4" $.mariadb_version }}
     labels:
       - dev.reward.container.name=salesdb
-      - dev.reward.environment.name={{ .reward_env_name }}
+      - dev.reward.environment.name={{ $.reward_env_name }}
     environment:
-      - MYSQL_ROOT_PASSWORD={{ default "magento" .mysql_root_password }}
-      - MYSQL_DATABASE={{ default "magento" .mysql_database }}
-      - MYSQL_USER={{ default "magento" .mysql_user }}
-      - MYSQL_PASSWORD={{ default "magento" .mysql_password }}
+      - MYSQL_ROOT_PASSWORD={{ default "magento" $.mysql_root_password }}
+      - MYSQL_DATABASE={{ default "magento" $.mysql_database }}
+      - MYSQL_USER={{ default "magento" $.mysql_user }}
+      - MYSQL_PASSWORD={{ default "magento" $.mysql_password }}
     command:
       - mysqld
       - --max_allowed_packet=1024M
