--- a/assets/templates/docker-compose/environments/includes/db.base.yml
+++ b/assets/templates/docker-compose/environments/includes/db.base.yml
@@ -6,48 +6,48 @@ services:
       - db
 
   db:
-    hostname: "{{ .reward_env_name }}-mariadb"
-    image: {{ default "docker.io/rewardenv" .reward_docker_image_repo }}/mariadb:{{ default "10.4" .mariadb_version }}
+    hostname: "{{ $.reward_env_name }}-mariadb"
+    image: {{ default "docker.io/rewardenv" $.reward_docker_image_repo }}/mariadb:{{ default "10.4" $.mariadb_version }}
     labels:
       - dev.reward.container.name=db
-      - dev.reward.environment.name={{ .reward_env_name }}
+      - dev.reward.environment.name={{ $.reward_env_name }}
     environment:
-      - MYSQL_ROOT_PASSWORD={{ default "app" .mysql_root_password }}
-      - MYSQL_DATABASE={{ default "app" .mysql_database }}
-      - MYSQL_USER={{ default "app" .mysql_user }}
-      - MYSQL_PASSWORD={{ default "app" .mysql_password }}
+      - MYSQL_ROOT_PASSWORD={{ default "app" $.mysql_root_password }}
+      - MYSQL_DATABASE={{ default "app" $.mysql_database }}
+      - MYSQL_USER={{ default "app" $.mysql_user }}
+      - MYSQL_PASSWORD={{ default "app" $.mysql_password }}
     volumes:
       - dbdata:/var/lib/mysql
-{{- if isEnabled ( default false .mysql_expose ) }}
+{{- if isEnabled ( default false $.mysql_expose ) }}
     ports:
-      - {{ default 3306 .mysql_expose_target }}:3306
+      - {{ default 3306 $.mysql_expose_target }}:3306
 {{- end }}
     command:
       - mysqld
       - --max_allowed_packet=1024M
       - --explicit_defaults_for_timestamp=on
-{{ if ge 10.5 (float64 .mariadb_version) }}
+{{ if ge 10.5 (float64 $.mariadb_version) }}
       - --log-bin-trust-function-creators=on
 {{ end }}
-{{ if eq (default "" .mysql_character_set_server) "" }}
+{{ if eq (default "" $.mysql_character_set_server) "" }}
       - --character-set-server=utf8mb4
 {{ else }}
-      - --character-set-server={{ .mysql_character_set_server }}
+      - --character-set-server={{ $.mysql_character_set_server }}
 {{ end }}
-{{ if eq (default "" .mysql_collation_server) "" }}
+{{ if eq (default "" $.mysql_collation_server) "" }}
       - --collation-server=utf8mb4_unicode_ci
 {{ else }}
-      - --collation-server={{ .mysql_collation_server }}
+      - --collation-server={{ $.mysql_collation_server }}
 {{ end }}
-{{ if ne (default "" .mysql_innodb_buffer_pool_size) "" }}
-      - --innodb-buffer-pool-size={{ .mysql_innodb_buffer_pool_size }}
+{{ if ne (default "" $.mysql_innodb_buffer_pool_size) "" }}
+      - --innodb-buffer-pool-size={{ $.mysql_innodb_buffer_pool_size }}
 {{ end }}
-{{ if ne (default "" .mysql_args) "" }}
-{{ range $v := (splitList " " .mysql_args) }}
+{{ if ne (default "" $.mysql_args) "" }}
+{{ range $v := (splitList " " $.mysql_args) }}
       - {{ $v }}
 {{ end }}
 {{ end }}
-{{ if isEnabled ( default false .mysql_disable_strict_mode ) }}
+{{ if isEnabled ( default false $.mysql_disable_strict_mode ) }}
       - --sql-mode=
       - --innodb_strict_mode=OFF
 {{ end }}
