--- a/assets/templates/docker-compose/environments/includes/mercure.base.yml
+++ b/assets/templates/docker-compose/environments/includes/mercure.base.yml
@@ -1,30 +1,34 @@
 {{- /* @formatter:off */ -}}
 
-{{ if isEnabled ( default false .reward_mercure ) }}
+{{ if isEnabled ( default false $.reward_mercure ) }}
 services:
   mercure:
     image: dunglas/mercure
     environment:
-      SERVER_NAME: {{ default ":80" .mercure_server_name | quote }}
-      MERCURE_PUBLISHER_JWT_KEY: {{ default "password" .mercure_publisher_jwt_key | quote }}
-      MERCURE_PUBLISHER_JWT_ALG: {{ default "HS256" .mercure_publisher_jwt_alg | quote }}
-      MERCURE_SUBSCRIBER_JWT_KEY: {{ default "password" .mercure_subscriber_jwt_key | quote }}
-      MERCURE_SUBSCRIBER_JWT_ALG: {{ default "HS256" .mercure_subscriber_jwt_alg | quote }}
-      {{ if ne ( default "" .mercure_extra_directives ) "" }}
-      MERCURE_EXTRA_DIRECTIVES: {{ default "" .mercure_extra_directives | quote }}
+      SERVER_NAME: {{ default ":80" $.mercure_server_name | quote }}
+      MERCURE_PUBLISHER_JWT_KEY: {{ default "password" $.mercure_publisher_jwt_key | quote }}
+      MERCURE_PUBLISHER_JWT_ALG: {{ default "HS256" $.mercure_publisher_jwt_alg | quote }}
+      MERCURE_SUBSCRIBER_JWT_KEY: {{ default "password" $.mercure_subscriber_jwt_key | quote }}
+      MERCURE_SUBSCRIBER_JWT_ALG: {{ default "HS256" $.mercure_subscriber_jwt_alg | quote }}
+      {{ if ne ( default "" $.mercure_extra_directives ) "" }}
+      MERCURE_EXTRA_DIRECTIVES: {{ default "" $.mercure_extra_directives | quote }}
       {{ end }}
     labels:
       - traefik.enable=true
-{{- if .reward_traefik_allow_http }}
-      - traefik.http.routers.{{ .reward_env_name }}-mercure-http.rule=Host(`{{ .traefik_domain }}`) && PathPrefix(`/.well-known/mercure`)
-      - traefik.http.routers.{{ .reward_env_name }}-mercure-http.service={{ .reward_env_name }}-mercure
+{{- if $.reward_traefik_allow_http }}
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure-http.rule=Host(`{{ $.traefik_domain }}`) && PathPrefix(`/.well-known/mercure`)
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure-http.service={{ $.reward_env_name }}-mercure
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure-http.entrypoints=http
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure.entrypoints=https
+{{- else }}
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure.entrypoints=http,https
 {{- end }}
-      - traefik.http.routers.{{ .reward_env_name }}-mercure.tls=true
-      - traefik.http.routers.{{ .reward_env_name }}-mercure.rule=Host(`{{ .traefik_domain }}`) && PathPrefix(`/.well-known/mercure`)
-      - traefik.http.services.{{ .reward_env_name }}-mercure.loadbalancer.server.port=80
-      - traefik.docker.network={{ .reward_env_name }}
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure.tls=true
+      - traefik.http.routers.{{ $.reward_env_name }}-mercure.rule=Host(`{{ $.traefik_domain }}`) && PathPrefix(`/.well-known/mercure`)
+      - traefik.http.services.{{ $.reward_env_name }}-mercure.loadbalancer.server.port=80
+      - traefik.docker.network={{ $.reward_env_name }}
       - dev.reward.container.name=mercure
-      - dev.reward.environment.name={{ .reward_env_name }}
+      - dev.reward.environment.name={{ $.reward_env_name }}
     hostname: mercure
     ports:
       - 80
