--- a/assets/templates/docker-compose/environments/includes/networks.base.yml
+++ b/assets/templates/docker-compose/environments/includes/networks.base.yml
@@ -2,7 +2,7 @@
 
 networks:
   default:
-    name: {{ .reward_env_name }}
+    name: {{ $.reward_env_name }}
     labels:
-      - dev.reward.environment.name={{ .reward_env_name }}
-      - dev.reward.environment.type={{ .reward_env_type }}
+      - dev.reward.environment.name={{ $.reward_env_name }}
+      - dev.reward.environment.type={{ $.reward_env_type }}
