--- a/assets/templates/docker-compose/environments/includes/redis.base.yml
+++ b/assets/templates/docker-compose/environments/includes/redis.base.yml
@@ -2,16 +2,16 @@
 
 services:
   redis:
-    hostname: "{{ .reward_env_name }}-redis"
-    image: {{ default "docker.io/rewardenv" .reward_docker_image_repo }}/redis:{{ default "6.0" .redis_version }}
+    hostname: "{{ $.reward_env_name }}-redis"
+    image: {{ default "docker.io/rewardenv" $.reward_docker_image_repo }}/redis:{{ default "6.0" $.redis_version }}
     labels:
       - dev.reward.container.name=redis
-      - dev.reward.environment.name={{ .reward_env_name }}
+      - dev.reward.environment.name={{ $.reward_env_name }}
     volumes:
       - redis:/data
-{{- if isEnabled ( default false .redis_expose ) }}
+{{- if isEnabled ( default false $.redis_expose ) }}
     ports:
-      - {{ default 6379 .redis_expose_target }}:6379
+      - {{ default 6379 $.redis_expose_target }}:6379
 {{- end }}
 
 volumes:
