--- a/assets/templates/docker-compose/environments/magento1/magento1.blackfire.darwin.yml
+++ b/assets/templates/docker-compose/environments/magento1/magento1.blackfire.darwin.yml
@@ -1,7 +1,7 @@
 {{- /* @formatter:off */ -}}
 
 x-volumes: &volumes
-  - .{{ default "" .reward_web_root }}/media:/var/www/html/media:cached
+  - .{{ default "" $.reward_web_root }}/media:/var/www/html/media:cached
   - appdata:/var/www/html
 
 x-environment: &environment
