--- a/assets/templates/docker-compose/environments/magento2/magento2.blackfire.windows.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.blackfire.windows.yml
@@ -1,11 +1,11 @@
 {{- /* @formatter:off */ -}}
 
 x-volumes: &volumes
-{{ if isEnabled .reward_sync_enabled }}
-  - .{{ default "" .reward_web_root }}/pub/media:/var/www/html/pub/media:cached
+{{ if isEnabled $.reward_sync_enabled }}
+  - .{{ default "" $.reward_web_root }}/pub/media:/var/www/html/pub/media:cached
   - appdata:/var/www/html
 {{ else }}
-  - .{{ default "" .reward_web_root }}/:/var/www/html
+  - .{{ default "" $.reward_web_root }}/:/var/www/html
 {{ end }}
 
 x-environment: &environment
