--- a/assets/templates/docker-compose/environments/magento2/magento2.magepack.base.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.magepack.base.yml
@@ -2,16 +2,16 @@
 
 services:
   magepack:
-    hostname: "{{ .reward_env_name }}-magepack"
-    image: {{ default "docker.io/rewardenv" .reward_docker_image_repo }}/magepack:{{ default "2.3" .magepack_version }}
+    hostname: "{{ $.reward_env_name }}-magepack"
+    image: {{ default "docker.io/rewardenv" $.reward_docker_image_repo }}/magepack:{{ default "2.3" $.magepack_version }}
     labels:
       - dev.reward.container.name=magepack
-      - dev.reward.environment.name={{ .reward_env_name }}
+      - dev.reward.environment.name={{ $.reward_env_name }}
     environment:
       - TRAEFIK_DOMAIN
       - TRAEFIK_SUBDOMAIN
     extra_hosts:
-      - {{ .traefik_domain }}:{{ default "0.0.0.0" .traefik_address }}
-      - {{ default "app" .traefik_subdomain }}.{{ .traefik_domain }}:{{ default "0.0.0.0" .traefik_address }}
+      - {{ $.traefik_domain }}:{{ default "0.0.0.0" $.traefik_address }}
+      - {{ default "app" $.traefik_subdomain }}.{{ $.traefik_domain }}:{{ default "0.0.0.0" $.traefik_address }}
     depends_on:
       - php-fpm
