--- a/.github/workflows/main-docker-image-mailbox.yml
+++ b/.github/workflows/main-docker-image-mailbox.yml
@@ -39,6 +39,9 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           driver-opts: image=moby/buildkit:master
+          config-inline: |
+            [registry."docker.io"]
+              mirrors = ["mirror.gcr.io"]
 
       - uses: supplypike/setup-bin@v3
         with:
